k8s_manifests/k8s_yamls/walkoff-storage-minikube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storage-test
spec:
  volumes:
    - name: storage-test-pvc 
      persistentVolumeClaim:
        claimName: storage-test-pvc
  containers:
  - image: busybox:latest
    name: storage-test
    volumeMounts: 
     - mountPath: /home/test
       name: storage-test-pvc 
    command: ["sleep", "10000"]
---
apiVersion: v1
kind: Pod
metadata:
  name: storage-test2
spec:
  volumes:
    - name: storage-test-pvc 
      persistentVolumeClaim:
        claimName: storage-test-pvc
  containers:
  - image: busybox:latest
    name: storage-test
    volumeMounts: 
     - mountPath: /home/test
       name: storage-test-pvc 
    command: ["sleep", "10000"]
