k8s_manifests/k8s_yamls/case-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-casedb
  namespace: walkoff
spec:
  ports:
  - name: postgres-casedb
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres-casedb
