k8s_manifests/k8s_yamls/redis-sentinel.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-sentinel
  namespace: walkoff
  labels:
    app: redis-sentinel
spec:
  ports:
  - port: 26379
    name: redis-sentinel
  clusterIP: None
  selector:
    app: redis-sentinel
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: redis-sentinel
  namespace: walkoff
spec:
  serviceName: redis-sentinel
  replicas: 3
  template:
    metadata:
      namespace: walkoff
      labels:
        app: redis-sentinel
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: redis-sentinel
        image: redis:3.2-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 26379
          name: redis-sentinel
