k8s_manifests/k8s_yamls/walkoff-app.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: walkoff-app
  namespace: walkoff
spec:
  selector:
    matchLabels:
      run: walkoff-app
  template:
    metadata:
      namespace: walkoff
      labels:
        run: walkoff-app
    spec:
      volumes:
      - name: cert-volume
        secret:
          secretName: walkoff-cert-secret
      - name: zmq-private
        secret:
          secretName: zmq-private-keys
      - name: zmq-public
        secret:
          secretName: zmq-public-keys
      - name: walkoff-storage
        persistentVolumeClaim:
          claimName: walkoff-storage
      containers:
      - name: walkoff-app
        image: walkoffacr.azurecr.io/walkoff-app:dev2
        volumeMounts:
        - name: cert-volume
          readOnly: true
          mountPath: "/app/walkoff/certs"
        - name: zmq-private
          readOnly: true
          mountPath: "/app/walkoff/certs/private_keys"
        - name: zmq-public
          readOnly: true
          mountPath: "/app/walkoff/certs/public_keys"
        - name: walkoff-storage
          mountPath: "/app/walkoff/commonstorage"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 5556
          name: zmq-results
        - containerPort: 5557
          name: zmq-comm
        command:
        - "sleep"
        - "36000"
      imagePullSecrets:
      - name: aks
---
apiVersion: v1
kind: Service
metadata:
  name: walkoff-app-public
  namespace: walkoff
  labels:
    run: walkoff-app
spec:
  ports:
  - port: 8080
    name: http
  selector:
    run: walkoff-app
---
apiVersion: v1
kind: Service
metadata:
  name: walkoff-app-internal
  namespace: walkoff
  labels:
    run: walkoff-app
spec:
  ports:
  - port: 5556
    name: zmq-results
  - port: 5557
    name: zmq-comm
  selector:
    run: walkoff-app
